WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
113628
Regression: columnheader/rowheader roles not exposed correctly
https://bugs.webkit.org/show_bug.cgi?id=113628
Summary
Regression: columnheader/rowheader roles not exposed correctly
James Craig
Reported
2013-03-29 16:47:20 PDT
Created
attachment 195819
[details]
ARIA CR test case ARIA CR blocker Open attached test case. columnheaders are exposed as AXCells (expected), but the AXColumnHeaderUIElements is empty on the containing AXTable. Note: this is from the ARIA test suite.
https://dvcs.w3.org/hg/pfwg/raw-file/default/ARIA/1.0/tests/test-files/roles-properties-supported-inherited/roles-properties-supported-inherited-columnheader-aria-expanded-true.html
https://www.w3.org/WAI/PF/testharness/testcases/edit/264
Attachments
ARIA CR test case
(1.01 KB, text/html)
2013-03-29 16:47 PDT
,
James Craig
no flags
Details
patch
(7.05 KB, patch)
2013-07-17 08:59 PDT
,
chris fleizach
thorton
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2013-03-29 16:47:28 PDT
<
rdar://problem/13540428
>
James Craig
Comment 2
2013-03-29 17:06:26 PDT
Should probably also update LayoutTest to include this check. /LayoutTests/accessibility/aria-tables.html
James Craig
Comment 3
2013-05-06 15:56:49 PDT
Looks like this is failing for rowheader, too.
https://dvcs.w3.org/hg/pfwg/raw-file/default/ARIA/1.0/tests/test-files/roles-properties-supported-inherited/roles-properties-supported-inherited-rowheader-aria-readonly-false.html
James Craig
Comment 4
2013-07-08 09:42:56 PDT
Another test case:
https://dvcs.w3.org/hg/pfwg/raw-file/default/ARIA/1.0/tests/test-files/roles-properties-supported-inherited/roles-properties-supported-inherited-columnheader-aria-readonly-true.html
chris fleizach
Comment 5
2013-07-17 08:59:40 PDT
Created
attachment 206890
[details]
patch
chris fleizach
Comment 6
2013-07-17 09:14:40 PDT
http://trac.webkit.org/changeset/152783
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug