Regression: columnheader/rowheader roles not exposed correctly https://bugs.webkit.org/show_bug.cgi?id=113628

Reviewed by Tim Horton.

Source/WebCore:

When we determine the row and column headers we look at the ARIA role being returned, but
since TableCell overrides the determineAccessibilityRole method, the ARIA role is never set.

Test: platform/mac/accessibility/aria-columnrowheaders.html

* accessibility/AccessibilityTableCell.cpp:
(WebCore::AccessibilityTableCell::determineAccessibilityRole):

LayoutTests:

* platform/mac/accessibility/aria-columnrowheaders-expected.txt: Added.
* platform/mac/accessibility/aria-columnrowheaders.html: Added.



Canonical link: https://commits.webkit.org/136663@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@152783 268f45cc-cd09-0410-ab3c-d52691b4dbfc